--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -23,7 +23,7 @@ $box-shadow: 0 0 45px rgba(0, 0, 0, 0.20);
   }
 
   &__label {
-    .me-feed__load-more & {
+    .me-collection__load-more & {
       font-family: $font-secondary-family;
       font-size: 14px;
       font-weight: 600;
