--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -5,7 +5,7 @@
   background: $surface-secondary-color;
   color: $font-secondary-color;
 
-  .me-feed__section-title-custom & {
+  .me-section-title-custom & {
     color: $font-tertiary-color;
     font-size: 13px;
 
