--- a/web/app/assets/stylesheets/components/me-components.scss
+++ b/web/app/assets/stylesheets/components/me-components.scss
@@ -34,4 +34,6 @@
 @import "me-see-all";
 @import "me-movie";
 @import "me-tab-bar";
-@import "me-tab-indicator"
+@import "me-tab-indicator";
+@import "me-section";
+@import "me-collection";
