--- a/web/app/assets/stylesheets/components/me-search-field.scss
+++ b/web/app/assets/stylesheets/components/me-search-field.scss
@@ -7,9 +7,9 @@ $field-height: 44px;
 
 .me-search-field {
   align-self: center;
-  width: 70%;
+  width: 100%;
   height: $field-height;
-  border-radius: 0;
+  border-radius: 12px;
   transition: height 0.2s linear;
   padding: 0 12px;
   margin: auto;
