--- a/web/app/assets/stylesheets/components/me-tab-indicator.scss
+++ b/web/app/assets/stylesheets/components/me-tab-indicator.scss
@@ -2,9 +2,9 @@
   &__content {
 
     &--underline {
-      @include desktop-only {
+      //@include desktop-only {
         width: 80px;
-      }
+      //}
     }
   }
 }
