--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -13,7 +13,7 @@
 
   </script>
 
-  <section class="me-feed__section" style="margin: 0 auto 25px auto;">
+  <section class="me-section" style="margin: 0 auto 25px auto;">
     <div class="me-chip-set__wrapper">
       <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
         <% @categories.delete_if { |category| ['anúncio', 'outlier', 'protesto'].include? category }.each do |category| %>
