--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -6,7 +6,7 @@ $name-color: $font-primary-color;
 $description-color: $font-secondary-color;
 
 .me-card {
-  background: $background-color;
+  background: $surface-color;
   position: relative;
   will-change: opacity, transform;
 
@@ -17,6 +17,10 @@ $description-color: $font-secondary-color;
     box-shadow: none;
     margin:6px 0 0 0;
     position: relative;
+    @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
+    @include mdc-layout-grid-media-query_("phone") {
+      min-height: 165px;
+    }
     &:hover {
       & .me-card__similar {
         opacity: 1;
@@ -28,6 +32,7 @@ $description-color: $font-secondary-color;
         transform: translate(0px, 0px);
       }
     }
+
   }
 
   .me-similar & {
@@ -124,7 +129,6 @@ $description-color: $font-secondary-color;
 
     & .mdc-card__media {
       border-radius: $media-border-radius;
-      border-radius: $media-border-radius;
       overflow: hidden;
       //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
       //box-shadow: $media-box-shadow-small;
@@ -141,23 +145,6 @@ $description-color: $font-secondary-color;
 
   & a {
     display: contents;
-  }
-
-  &__date {
-    .me-card--feed & {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  }
-
-  &__date-distance-in-words {
-    color: lighten($font-tertiary-color, 10%);
-    font-size: 9px;
-    line-height: 1;
-    padding: 2px 0 0 0;
-    @include mobile-only {
-      font-size: 8px;
-    }
   }
 
   & .mdc-card__title {
@@ -197,7 +184,7 @@ $description-color: $font-secondary-color;
     background: linear-gradient(to top, #ffffff38, transparent);
     overflow: hidden;
     border-radius: $media-border-radius;
-    box-shadow: $media-box-shadow-large;
+    //box-shadow: $media-box-shadow-large;
     @include mdc-ripple-surface;
     @include mdc-ripple-radius-bounded;
     @include mdc-states;
@@ -216,10 +203,12 @@ $description-color: $font-secondary-color;
     line-height: 1em;
     display: flex;
     flex-wrap: wrap;
+    z-index: 5;
+    margin: 0 0 12px 6px;
     // position: absolute;
     // top: 6px;
     // left: 6px;
-    z-index: 5;
+    //display: none;
     .me-card--single & {
       color: $font-primary-color;
       text-transform: none;
@@ -234,6 +223,26 @@ $description-color: $font-secondary-color;
     .me-similar & {
       font-size: 10px;
       font-weight: 500;
+    }
+  }
+
+  &__date {
+    .me-card--feed & {
+      flex-direction: column;
+      align-items: flex-start;
+      color: lighten($font-tertiary-color, 10%);
+      font-size: 10px;
+      line-height: 1;
+    }
+  }
+
+  &__date-distance-in-words {
+    color: lighten($font-tertiary-color, 10%);
+    font-size: 9px;
+    line-height: 1;
+    padding: 2px 0 0 0;
+    @include mobile-only {
+      font-size: 8px;
     }
   }
 
@@ -282,6 +291,7 @@ $description-color: $font-secondary-color;
   &__organizer {
     a {
       text-decoration: none;
+      color: $font-tertiary-color;
     }
   }
 
@@ -388,8 +398,8 @@ $description-color: $font-secondary-color;
   &__like-button {
     position: absolute;
     z-index: 2;
-    bottom: -18px;
-    right: 6px;
+    top: 12px;
+    right: 12px;
     border-radius: 25px;
     overflow: hidden;
     box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
@@ -421,16 +431,16 @@ $description-color: $font-secondary-color;
 
   &--feed {
 
+    //
+    //.me-event-single__similar & {
+    //  margin: 6px 0 30px 0;
+    //}
 
-    .me-event-single__similar & {
-      margin: 6px 0 30px 0;
-    }
-
-    @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
-
-    @include mdc-layout-grid-media-query_("phone") {
-      min-height: 165px;
-    }
+    //@include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
+    //
+    //@include mdc-layout-grid-media-query_("phone") {
+    //  min-height: 165px;
+    //}
 
     //& .mdc-typography--headline1 {
     //  color: $font-primary-color;
@@ -452,19 +462,19 @@ $description-color: $font-secondary-color;
     //  }
     //}
 
-    & .mdc-card__title {
-      color: $name-color;
-      font-size: 14px;
-      line-height: 1.2em;
-      margin: 6px 0 0 0;
-      font-family: Roboto;
-      font-weight: 500;
-
-      @include mdc-layout-grid-media-query_("phone") {
-        margin: 6px 0 0 0;
-        color: $font-secondary-color;
-      }
-    }
+    //& .mdc-card__title {
+    //  color: $name-color;
+    //  font-size: 14px;
+    //  line-height: 1.2em;
+    //  margin: 6px 0 0 0;
+    //  font-family: Roboto;
+    //  font-weight: 500;
+    //
+    //  @include mdc-layout-grid-media-query_("phone") {
+    //    margin: 6px 0 0 0;
+    //    color: $font-secondary-color;
+    //  }
+    //}
 
     //
     //& .mdc-card__actions {
@@ -498,246 +508,246 @@ $description-color: $font-secondary-color;
     //}
   }
 
-  &--single {
-    padding: 35px 0;
-    font-size: 16px;
-    line-height: 1.4em;
-    @include mdc-layout-grid-media-query_("phone") {
-      padding: 0;
-    }
-
-    &[data-event-description-open="true"] {
-
-      & .me-card__description-wrapper {
-        max-height: unset;
-        text-align: left;
-
-        & br {
-          content: unset;
-        }
-
-        &::before {
-          display: none;
-        }
-      }
-
-      & .me-card__description {
-        & button {
-          display: none;
-        }
-      }
-    }
-
-    & .me-card__breadcrumb {
-      display: -webkit-box;
-      display: flex;
-      flex-direction: row;
-      margin: 0 0 12px 0;
-      text-transform: uppercase;
-      font-size: 11px;
-      @include mobile-only {
-        display: none;
-      }
-
-      & span {
-        padding: 0 12px;
-      }
-
-      & i {
-        font-style: normal;
-      }
-    }
-
-    & .me-card__primary-section {
-      color: $font-secondary-color;
-
-      & a {
-        color: $font-secondary-color;
-      }
-    }
-
-    & .me-card__head {
-      display: flex;
-      flex-direction: row;
-      align-items: baseline;
-      height: 450px;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-content: baseline;
-      position: relative;
-      @include mdc-layout-grid-media-query_("phone") {
-        height: auto;
-        align-content: center;
-        justify-content: center;
-        flex-direction: row;
-        width: 100vw;
-        top: -24px;
-        left: -24px;
-      }
-    }
-
-    & .me-card__media {
-      width: 100%;
-      height: 370px;
-      background-size: cover;
-      background-position: center;
-      border-radius: $media-border-radius;
-      position: relative;
-      box-shadow: $media-box-shadow-large;
-      @include mdc-layout-grid-media-query_("phone") {
-        width: 100%;
-        height: 200px;
-        border-radius: 0;
-        box-shadow: none;
-      }
-    }
-
-    & .me-card__name {
-      padding: 0;
-      margin: 25px 0 30px 15px;
-      width: 100%;
-      text-align: center;
-      line-height: 1.3em;
-      font-family: $font-primary-family;
-      font-weight: 800;
-      font-size: 28px;
-      color: $font-primary-color;
-      @include mdc-layout-grid-media-query_("phone") {
-        font-size: 21px;
-        width: 90%;
-        text-align: center;
-        margin: 15px 0 0 0;
-      }
-    }
-
-    & .me-card__topics {
-      text-align: center;
-      margin: auto;
-
-      & .mdc-chip-set {
-        display: inline;
-      }
-
-      & .mdc-chip__text {
-        font-size: 12px;
-      }
-    }
-
-    & .me-card__like-button {
-      bottom: -20px;
-      right: 16px;
-    }
-
-    //& .me-card__primary-section {
-      //color: $font-primary-color;
-      //text-transform: none;
-      //display: flex;
-      //margin: 50px 0;
-      //@include mdc-layout-grid-media-query_("phone") {
-      //  flex-direction: column;
-      //  margin: 24px 0;
-      //}
+  //&--single {
+    //padding: 35px 0;
+    //font-size: 16px;
+    //line-height: 1.4em;
+    //@include mdc-layout-grid-media-query_("phone") {
+    //  padding: 0;
     //}
-
-    & .me-card__place, .me-card__date {
-      //background: $background-z0-color;
-      padding: 10px;
-      margin: 0 15px 0 0;
-      border-radius: 5px;
-      width: 50%;
-      @include mdc-layout-grid-media-query_("phone") {
-        width: auto;
-        margin: 0 0 16px 0;
-        display: flex;
-      }
-
-      &-title {
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px;
-        margin: 0 0 3px 0;
-        line-height: 1em;
-        text-transform: capitalize;
-
-        & a:hover {
-          color: $brand-color;
-        }
-      }
-
-      & i {
-        float: left;
-        margin: 0 10px 0 0;
-      }
-
-      & span {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-      }
-    }
-
-    & .me-card__address {
-      font-style: normal;
-      font-weight: normal;
-      font-size: 12px;
-
-      &:hover {
-        color: $brand-color;
-      }
-    }
-
-    & .me-card__date {
-      margin: 0;
-    }
-
-    & .me-card__description {
-      margin: 35px 0;
-
-      & button {
-        margin: auto;
-        display: block;
-      }
-    }
-
-    & .me-card__description-wrapper {
-      font-weight: normal;
-      font-size: 16px;
-      line-height: 1.6em;
-      position: relative;
-      max-height: 150px;
-      overflow: hidden;
-      text-align: justify;
-
-      & br {
-        content: close-quote;
-      }
-
-      &::before {
-        content: close-quote;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background: linear-gradient(0deg, #FFFFFF 15%, transparent 100%);
-        z-index: 2;
-      }
-
-      & a {
-        text-decoration: underline;
-        color: $link-color;
-      }
-    }
-
-    & .me-icon-button.mdc-icon-button {
-      display: block;
-    }
-
-    & .mdc-typography--body2 {
-      font-weight: 400;
-      padding: 0 16px 16px;
-      font-family: Cabin;
-      font-size: 14px;
-    }
-  }
+    //
+    //&[data-event-description-open="true"] {
+    //
+    //  & .me-card__description-wrapper {
+    //    max-height: unset;
+    //    text-align: left;
+    //
+    //    & br {
+    //      content: unset;
+    //    }
+    //
+    //    &::before {
+    //      display: none;
+    //    }
+    //  }
+    //
+    //  & .me-card__description {
+    //    & button {
+    //      display: none;
+    //    }
+    //  }
+    //}
+    //
+    //& .me-card__breadcrumb {
+    //  display: -webkit-box;
+    //  display: flex;
+    //  flex-direction: row;
+    //  margin: 0 0 12px 0;
+    //  text-transform: uppercase;
+    //  font-size: 11px;
+    //  @include mobile-only {
+    //    display: none;
+    //  }
+    //
+    //  & span {
+    //    padding: 0 12px;
+    //  }
+    //
+    //  & i {
+    //    font-style: normal;
+    //  }
+    //}
+    //
+    //& .me-card__primary-section {
+    //  color: $font-secondary-color;
+    //
+    //  & a {
+    //    color: $font-secondary-color;
+    //  }
+    //}
+    //
+    //& .me-card__head {
+    //  display: flex;
+    //  flex-direction: row;
+    //  align-items: baseline;
+    //  height: 450px;
+    //  flex-wrap: wrap;
+    //  justify-content: center;
+    //  align-content: baseline;
+    //  position: relative;
+    //  @include mdc-layout-grid-media-query_("phone") {
+    //    height: auto;
+    //    align-content: center;
+    //    justify-content: center;
+    //    flex-direction: row;
+    //    width: 100vw;
+    //    top: -24px;
+    //    left: -24px;
+    //  }
+    //}
+    //
+    //& .me-card__media {
+    //  width: 100%;
+    //  height: 370px;
+    //  background-size: cover;
+    //  background-position: center;
+    //  border-radius: $media-border-radius;
+    //  position: relative;
+    //  box-shadow: $media-box-shadow-large;
+    //  @include mdc-layout-grid-media-query_("phone") {
+    //    width: 100%;
+    //    height: 200px;
+    //    border-radius: 0;
+    //    box-shadow: none;
+    //  }
+    //}
+    //
+    //& .me-card__name {
+    //  padding: 0;
+    //  margin: 25px 0 30px 15px;
+    //  width: 100%;
+    //  text-align: center;
+    //  line-height: 1.3em;
+    //  font-family: $font-primary-family;
+    //  font-weight: 800;
+    //  font-size: 28px;
+    //  color: $font-primary-color;
+    //  @include mdc-layout-grid-media-query_("phone") {
+    //    font-size: 21px;
+    //    width: 90%;
+    //    text-align: center;
+    //    margin: 15px 0 0 0;
+    //  }
+    //}
+    //
+    //& .me-card__topics {
+    //  text-align: center;
+    //  margin: auto;
+    //
+    //  & .mdc-chip-set {
+    //    display: inline;
+    //  }
+    //
+    //  & .mdc-chip__text {
+    //    font-size: 12px;
+    //  }
+    //}
+    //
+    //& .me-card__like-button {
+    //  bottom: -20px;
+    //  right: 16px;
+    //}
+    //
+    ////& .me-card__primary-section {
+    //  //color: $font-primary-color;
+    //  //text-transform: none;
+    //  //display: flex;
+    //  //margin: 50px 0;
+    //  //@include mdc-layout-grid-media-query_("phone") {
+    //  //  flex-direction: column;
+    //  //  margin: 24px 0;
+    //  //}
+    ////}
+    //
+    //& .me-card__place, .me-card__date {
+    //  //background: $background-z0-color;
+    //  padding: 10px;
+    //  margin: 0 15px 0 0;
+    //  border-radius: 5px;
+    //  width: 50%;
+    //  @include mdc-layout-grid-media-query_("phone") {
+    //    width: auto;
+    //    margin: 0 0 16px 0;
+    //    display: flex;
+    //  }
+    //
+    //  &-title {
+    //    font-style: normal;
+    //    font-weight: bold;
+    //    font-size: 14px;
+    //    margin: 0 0 3px 0;
+    //    line-height: 1em;
+    //    text-transform: capitalize;
+    //
+    //    & a:hover {
+    //      color: $brand-color;
+    //    }
+    //  }
+    //
+    //  & i {
+    //    float: left;
+    //    margin: 0 10px 0 0;
+    //  }
+    //
+    //  & span {
+    //    font-style: normal;
+    //    font-weight: normal;
+    //    font-size: 12px;
+    //  }
+    //}
+    //
+    //& .me-card__address {
+    //  font-style: normal;
+    //  font-weight: normal;
+    //  font-size: 12px;
+    //
+    //  &:hover {
+    //    color: $brand-color;
+    //  }
+    //}
+    //
+    //& .me-card__date {
+    //  margin: 0;
+    //}
+    //
+    //& .me-card__description {
+    //  margin: 35px 0;
+    //
+    //  & button {
+    //    margin: auto;
+    //    display: block;
+    //  }
+    //}
+    //
+    //& .me-card__description-wrapper {
+    //  font-weight: normal;
+    //  font-size: 16px;
+    //  line-height: 1.6em;
+    //  position: relative;
+    //  max-height: 150px;
+    //  overflow: hidden;
+    //  text-align: justify;
+    //
+    //  & br {
+    //    content: close-quote;
+    //  }
+    //
+    //  &::before {
+    //    content: close-quote;
+    //    width: 100%;
+    //    height: 100%;
+    //    position: absolute;
+    //    background: linear-gradient(0deg, #FFFFFF 15%, transparent 100%);
+    //    z-index: 2;
+    //  }
+    //
+    //  & a {
+    //    text-decoration: underline;
+    //    color: $link-color;
+    //  }
+    //}
+    //
+    //& .me-icon-button.mdc-icon-button {
+    //  display: block;
+    //}
+    //
+    //& .mdc-typography--body2 {
+    //  font-weight: 400;
+    //  padding: 0 16px 16px;
+    //  font-family: Cabin;
+    //  font-size: 14px;
+    //}
+  //}
 
   &--notice {
     min-height: 30vh;
