--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -5,12 +5,16 @@
   @include mdc-layout-grid-media-query_("phone") {
     text-align: left;
     width: max-content;
-    .me-feed__section-head & {
+    .me-section-head & {
       padding: 0 25px 0 15px;
     }
     [data-controller="search"][data-action="index"] & {
       width: auto;
     }
+  }
+
+  .me-collection__title-custom & {
+    padding: 0;
   }
 
 
