--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -2,8 +2,248 @@
 
 .me-event-single {
 
+  padding: 35px 0;
+  font-size: 16px;
+  line-height: 1.4em;
+  @include mdc-layout-grid-media-query_("phone") {
+    padding: 0;
+  }
+
+  &[data-event-description-open="true"] {
+
+    & .me-card__description-wrapper {
+      max-height: unset;
+      text-align: left;
+
+      & br {
+        content: unset;
+      }
+
+      &::before {
+        display: none;
+      }
+    }
+
+    & .me-card__description {
+      & button {
+        display: none;
+      }
+    }
+  }
+
+  & .me-card__breadcrumb {
+    display: -webkit-box;
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 12px 0;
+    text-transform: uppercase;
+    font-size: 11px;
+    @include mobile-only {
+      display: none;
+    }
+
+    & span {
+      padding: 0 12px;
+    }
+
+    & i {
+      font-style: normal;
+    }
+  }
+
+  & .me-card__primary-section {
+    color: $font-secondary-color;
+
+    & a {
+      color: $font-secondary-color;
+    }
+  }
+
+  & .me-card__head {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    height: 450px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: baseline;
+    position: relative;
+    @include mdc-layout-grid-media-query_("phone") {
+      height: auto;
+      align-content: center;
+      justify-content: center;
+      flex-direction: row;
+      width: 100vw;
+      top: -24px;
+      left: -24px;
+    }
+  }
+
+  & .me-card__media {
+    width: 100%;
+    height: 370px;
+    background-size: cover;
+    background-position: center;
+    border-radius: $media-border-radius;
+    position: relative;
+    box-shadow: $media-box-shadow-large;
+    @include mdc-layout-grid-media-query_("phone") {
+      width: 100%;
+      height: 200px;
+      border-radius: 0;
+      box-shadow: none;
+    }
+  }
+
+  & .me-card__name {
+    padding: 0;
+    margin: 25px 0 30px 15px;
+    width: 100%;
+    text-align: center;
+    line-height: 1.3em;
+    font-family: $font-primary-family;
+    font-weight: 800;
+    font-size: 28px;
+    color: $font-primary-color;
+    @include mdc-layout-grid-media-query_("phone") {
+      font-size: 21px;
+      width: 90%;
+      text-align: center;
+      margin: 15px 0 0 0;
+    }
+  }
+
+  & .me-card__topics {
+    text-align: center;
+    margin: auto;
+
+    & .mdc-chip-set {
+      display: inline;
+    }
+
+    & .mdc-chip__text {
+      font-size: 12px;
+    }
+  }
+
+  & .me-card__like-button {
+    bottom: -20px;
+    right: 16px;
+  }
+
+  //& .me-card__primary-section {
+  //color: $font-primary-color;
+  //text-transform: none;
+  //display: flex;
+  //margin: 50px 0;
+  //@include mdc-layout-grid-media-query_("phone") {
+  //  flex-direction: column;
+  //  margin: 24px 0;
+  //}
+  //}
+
+  & .me-card__place, .me-card__date {
+    //background: $background-z0-color;
+    padding: 10px;
+    margin: 0 15px 0 0;
+    border-radius: 5px;
+    width: 50%;
+    @include mdc-layout-grid-media-query_("phone") {
+      width: auto;
+      margin: 0 0 16px 0;
+      display: flex;
+    }
+
+    &-title {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      margin: 0 0 3px 0;
+      line-height: 1em;
+      text-transform: capitalize;
+
+      & a:hover {
+        color: $brand-color;
+      }
+    }
+
+    & i {
+      float: left;
+      margin: 0 10px 0 0;
+    }
+
+    & span {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+    }
+  }
+
+  & .me-card__address {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+
+    &:hover {
+      color: $brand-color;
+    }
+  }
+
+  & .me-card__date {
+    margin: 0;
+  }
+
+  & .me-card__description {
+    margin: 35px 0;
+
+    & button {
+      margin: auto;
+      display: block;
+    }
+  }
+
+  & .me-card__description-wrapper {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.6em;
+    position: relative;
+    max-height: 150px;
+    overflow: hidden;
+    text-align: justify;
+
+    & br {
+      content: close-quote;
+    }
+
+    &::before {
+      content: close-quote;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: linear-gradient(0deg, #FFFFFF 15%, transparent 100%);
+      z-index: 2;
+    }
+
+    & a {
+      text-decoration: underline;
+      color: $link-color;
+    }
+  }
+
+  & .me-icon-button.mdc-icon-button {
+    display: block;
+  }
+
+  & .mdc-typography--body2 {
+    font-weight: 400;
+    padding: 0 16px 16px;
+    font-family: Cabin;
+    font-size: 14px;
+  }
+
   &__similar {
     margin-top: 85px;
+
 
     & .me-card__like-button {
       bottom: -16px;
