--- a/web/app/assets/stylesheets/components/me-notification.scss
+++ b/web/app/assets/stylesheets/components/me-notification.scss
@@ -1,12 +1,12 @@
 .me-notification {
-  padding: 16px 12px;
-  margin: 24px 0 0 0;
-  border-radius: 10px;
-  box-shadow: 0 0 50px #00000012;
+  //padding: 16px 12px;
+  //margin: 24px 0 0 0;
+  //border-radius: 10px;
+  //box-shadow: 0 0 50px #00000012;
   @include mobile-only {
-    padding: 20px 12px 16px 12px;
-    margin: 6px 0 6px 0;
-    box-shadow: 0 0 10px #00000012;
+    padding: 0 24px;
+    //margin: 6px 0 6px 0;
+    //box-shadow: 0 0 10px #00000012;
   }
 
   & label {
@@ -23,7 +23,7 @@
 
   &[data-notification-active="true"] {
     margin: 0;
-    padding: 18px 0;
+    //padding: 18px 0;
     box-shadow: none;
     color: $font-tertiary-color;
     @include mobile-only {
