--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -4,7 +4,7 @@
   --mdc-layout-grid-margin-phone: 0;
   --mdc-layout-grid-gutter-phone: 0 16px;
   --mdc-layout-grid-margin-desktop: 0;
-  --mdc-layout-grid-gutter-desktop: 25px 16px;
+  --mdc-layout-grid-gutter-desktop: 6px 24px;
 
   color: $font-primary-color;
   @include is-show-in-animated;
@@ -28,8 +28,8 @@
     }
 
     &--z0 {
-      background: $background-z0-color;
-      border-bottom: 1px solid #efefef;
+      //background: $background-z0-color;
+      //border-bottom: 1px solid #efefef;
     }
 
     &-title {
@@ -48,7 +48,9 @@
   }
 
   &--feed {
-    margin: 0;
+    @include desktop-only {
+      margin: 0 0 0 73px;
+    }
   }
 
   &--search {
@@ -72,7 +74,7 @@
         //grid-column-end: span 8;
       }
 
-      & .me-feed__section {
+      & .me-section {
         //padding: 0;
       }
 
@@ -132,7 +134,7 @@
       //  grid-column-end: span 8;
       //}
       //
-      //& .me-feed__section {
+      //& .me-section {
       //  //padding: 0;
       //}
 
