--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -4,16 +4,23 @@
 @import "@material/tab/mdc-tab";
 
 .me-tab-bar {
-  @include mdc-tab-bar-density(-4);
   // border-bottom: 5px solid $surface-tertiary-color;
+  //margin: 0 0 6px 0;
+  @include mdc-tab-bar-density(-3);
   background: $surface-color;
-  margin: 0 0 6px 0;
-  display: inline-block;
+  display: block;
+  border-bottom: 1px solid $background-color;
+  width: auto;
   @include desktop-only {
-    margin: 0 0 24px 0;
+    z-index: 2;
+    padding: 0 0 0 73px;
+    position: sticky;
+    top: 0;
+    //margin: 0 0 24px 0;
   }
   @include mobile-only {
-    @include mdc-tab-bar-density(-2);
+    @include mdc-tab-bar-density(-1);
+    //border-bottom: 6px solid $background-color;
   }
 
   & .mdc-tab {
@@ -24,7 +31,7 @@
 
   & .mdc-tab-scroller {
     @include desktop-only {
-      width: 1050px;
+      width: $main-content-width;
       margin: auto;
     }
   }
