--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
   <% content_for :meta_title, "#{@user.first_name} | Alegreme.com" %>
 
-  <div class="me-user-profile me-feed__section">
+  <div class="me-user-profile me-section">
     <% if @user.picture %>
       <img class="me-user-profile__picture" src="<%= @user.picture %>" alt="<%= @user.first_name %>">
     <% end %>
@@ -13,7 +13,7 @@
     </h1>
   </div>
 
-  <section class="me-feed__section">
+  <section class="me-section">
     <h2>Tópicos que você segue</h2>
     <div class="is-horizontal-scrollable">
       <%= render partial: 'components/follow/follow', locals: {
