--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -1,8 +1,12 @@
 @import "variables";
 
-.me-event-single {
+@mixin with-divider {
+  //margin: 0 0 24px 0;
+  border-bottom: 1px solid $border-color;
+  padding: 24px 0;
+}
 
-  padding: 35px 0;
+.me-event-single {
   font-size: 16px;
   line-height: 1.4em;
   @include mdc-layout-grid-media-query_("phone") {
@@ -11,7 +15,7 @@
 
   &[data-event-description-open="true"] {
 
-    & .me-card__description-wrapper {
+    .me-event-single__description-wrapper {
       max-height: unset;
       text-align: left;
 
@@ -24,14 +28,14 @@
       }
     }
 
-    & .me-card__description {
+    .me-event-single__description {
       & button {
         display: none;
       }
     }
   }
 
-  & .me-card__breadcrumb {
+  &__breadcrumb {
     display: -webkit-box;
     display: flex;
     flex-direction: row;
@@ -51,42 +55,45 @@
     }
   }
 
-  & .me-card__primary-section {
-    color: $font-secondary-color;
-
-    & a {
-      color: $font-secondary-color;
-    }
+  &__primary-section {
+    display: grid;
+    grid-template-columns: 50% 1fr;
+    grid-gap: 24px;
+    @include with-divider;
   }
 
-  & .me-card__head {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    height: 450px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: baseline;
-    position: relative;
-    @include mdc-layout-grid-media-query_("phone") {
-      height: auto;
-      align-content: center;
-      justify-content: center;
-      flex-direction: row;
-      width: 100vw;
-      top: -24px;
-      left: -24px;
-    }
+  &__head {
+    //display: flex;
+    //flex-direction: row;
+    //align-items: baseline;
+    //flex-wrap: wrap;
+    //justify-content: center;
+    //align-content: baseline;
+    //position: relative;
+    //@include mdc-layout-grid-media-query_("phone") {
+    //  height: auto;
+    //  align-content: center;
+    //  justify-content: center;
+    //  flex-direction: row;
+    //  width: 100vw;
+    //  top: -24px;
+    //  left: -24px;
+    //}
   }
 
-  & .me-card__media {
+  &__content {
+    padding: 0 $section-padding-phone;
+    display: inline-block;
+  }
+
+  &__media {
     width: 100%;
     height: 370px;
     background-size: cover;
     background-position: center;
-    border-radius: $media-border-radius;
+    //border-radius: $media-border-radius;
     position: relative;
-    box-shadow: $media-box-shadow-large;
+    //box-shadow: $media-box-shadow-large;
     @include mdc-layout-grid-media-query_("phone") {
       width: 100%;
       height: 200px;
@@ -95,16 +102,16 @@
     }
   }
 
-  & .me-card__name {
-    padding: 0;
-    margin: 25px 0 30px 15px;
+  &__name {
     width: 100%;
-    text-align: center;
+    text-align: left;
     line-height: 1.3em;
     font-family: $font-primary-family;
     font-weight: 800;
     font-size: 28px;
     color: $font-primary-color;
+    margin: 0;
+    @include with-divider;
     @include mdc-layout-grid-media-query_("phone") {
       font-size: 21px;
       width: 90%;
@@ -113,9 +120,11 @@
     }
   }
 
-  & .me-card__topics {
+  &__topics {
     text-align: center;
     margin: auto;
+    display: none;
+    @include with-divider;
 
     & .mdc-chip-set {
       display: inline;
@@ -126,12 +135,12 @@
     }
   }
 
-  & .me-card__like-button {
-    bottom: -20px;
+  &__like-button {
+    //bottom: -20px;
     right: 16px;
   }
 
-  //& .me-card__primary-section {
+  //&__primary-section {
   //color: $font-primary-color;
   //text-transform: none;
   //display: flex;
@@ -142,16 +151,10 @@
   //}
   //}
 
-  & .me-card__place, .me-card__date {
-    //background: $background-z0-color;
-    padding: 10px;
-    margin: 0 15px 0 0;
-    border-radius: 5px;
-    width: 50%;
+  &__place, &__date {
+    display: flex;
     @include mdc-layout-grid-media-query_("phone") {
-      width: auto;
-      margin: 0 0 16px 0;
-      display: flex;
+
     }
 
     &-title {
@@ -179,7 +182,7 @@
     }
   }
 
-  & .me-card__address {
+  &__address {
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
@@ -189,11 +192,11 @@
     }
   }
 
-  & .me-card__date {
+  &__date {
     margin: 0;
   }
 
-  & .me-card__description {
+  &__description {
     margin: 35px 0;
 
     & button {
@@ -202,7 +205,7 @@
     }
   }
 
-  & .me-card__description-wrapper {
+  &__description-wrapper {
     font-weight: normal;
     font-size: 16px;
     line-height: 1.6em;
@@ -230,22 +233,22 @@
     }
   }
 
-  & .me-icon-button.mdc-icon-button {
-    display: block;
-  }
-
-  & .mdc-typography--body2 {
-    font-weight: 400;
-    padding: 0 16px 16px;
-    font-family: Cabin;
-    font-size: 14px;
-  }
+  //& .me-icon-button.mdc-icon-button {
+  //  display: block;
+  //}
+  //
+  //& .mdc-typography--body2 {
+  //  font-weight: 400;
+  //  padding: 0 16px 16px;
+  //  font-family: Cabin;
+  //  font-size: 14px;
+  //}
 
   &__similar {
-    margin-top: 85px;
+    //margin-top: 85px;
 
 
-    & .me-card__like-button {
+    &__like-button {
       bottom: -16px;
       right: 4px;
 
