--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -68,7 +68,7 @@
     }
 
     & .me-card__like-button {
-      bottom: -16px;
+      //bottom: -16px;
       right: 4px;
 
       & .me-icon-button.mdc-icon-button {
